<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="8dp"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:id="@+id/constraintLayout">

		<TextView
				style="@style/BlueDark.Size20"
				android:text="@string/label_new_player"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/textView3"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="8dp"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginBottom="8dp"
				app:layout_constraintVertical_bias="1.0"
				app:layout_constraintStart_toEndOf="@+id/imageView5"
				android:layout_marginStart="8dp"/>

		<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				app:srcCompat="@drawable/icon_players"
				android:id="@+id/imageView5"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginBottom="8dp"
				app:layout_constraintVertical_bias="0.6"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintHorizontal_bias="0.0"/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<com.google.android.material.textfield.TextInputLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp"
			android:id="@+id/textInputLayout"
			android:fitsSystemWindows="true"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="16dp">

		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fitsSystemWindows="true"
				android:hint="@string/hint_user_name"
				android:id="@+id/name_input_tiet_dfbcun"/>
	</com.google.android.material.textfield.TextInputLayout>

	<Button
			android:id="@+id/button_create_new_player_btn_dfbcun"
			style="@style/ButtonSecondWhite"
			android:text="@string/button_create"
			android:layout_width="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginBottom="16dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
			android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>