<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:cardCornerRadius="12dp"
		app:cardElevation="14dp"
		android:id="@+id/asd"
		app:contentPadding="0dp"
		app:cardPreventCornerOverlap="true"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="8dp"
		android:layout_marginTop="8dp">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:background="@drawable/color_blue_gradient"
				android:id="@+id/right_site">

			<LinearLayout
					android:orientation="vertical"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintHorizontal_bias="0.5"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					android:layout_marginTop="32dp"
					android:layout_marginBottom="32dp"
					android:gravity="center">

				<TextView
						style="@style/White.Size36"
						android:text="1623"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/textView4"/>

				<TextView
						android:text="@string/label_wins"
						style="@style/White.Size24"
						android:textAlignment="center"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/textView10"/>
			</LinearLayout>
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="0dp"
				android:layout_height="0dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:id="@+id/constraintLayout2"
				app:layout_constraintEnd_toStartOf="@+id/right_site"
				>

			<TextView
					android:text="-name-"
					style="@style/BlueDark.Size24"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:id="@+id/player_name_tv_ipd"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintEnd_toStartOf="@+id/icon_menu_fl_ipd"
					android:layout_marginStart="16dp"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toBottomOf="@+id/icon_menu_fl_ipd"/>

			<FrameLayout
					android:layout_width="48dp"
					android:layout_height="48dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					android:id="@+id/icon_menu_fl_ipd"
					>

				<ImageView
						android:layout_width="wrap_content"
						android:layout_height="24dp"
						app:srcCompat="@drawable/icon_dots_menu"
						tools:layout_editor_absoluteY="0dp"
						tools:layout_editor_absoluteX="177dp"
						android:id="@+id/imageView"
						android:scaleType="fitCenter"
						android:adjustViewBounds="true"
						android:cropToPadding="true"
						android:layout_gravity="center"
						android:layout_margin="2dp"
						android:padding="4dp"/>
			</FrameLayout>

			<LinearLayout
					android:orientation="vertical"
					android:layout_width="0dp"
					android:layout_height="0dp"
					app:layout_constraintBottom_toBottomOf="parent"
					android:layout_marginEnd="8dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="16dp"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/player_name_tv_ipd"
					android:gravity="center"
					android:layout_marginBottom="8dp">

				<LinearLayout
						android:orientation="horizontal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/margin_text_player_item">

					<TextView
							style="@style/Grey.Size14"
							android:text="@string/label_total_points"
							android:layout_width="120dp"
							android:layout_height="wrap_content"
							android:id="@+id/textView15"
							android:gravity="right"/>

					<TextView
							style="@style/BlueDark.Size16"
							android:text="0"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/textView14"
							android:layout_weight="1"
							android:gravity="left"
							android:layout_marginLeft="@dimen/margin_text_player_item"/>
				</LinearLayout>

				<LinearLayout
						android:orientation="horizontal"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/margin_text_player_item">

					<TextView
							style="@style/Grey.Size14"
							android:text="@string/label_games"
							android:layout_width="120dp"
							android:layout_height="wrap_content"
							android:id="@+id/textView12"
							android:gravity="right"/>

					<TextView
							style="@style/BlueDark.Size16"
							android:text="0"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/textView13"
							android:layout_weight="1"
							android:gravity="left"
							android:layout_marginLeft="@dimen/margin_text_player_item"/>
				</LinearLayout>
			</LinearLayout>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>