<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="14dp"
        android:id="@+id/game_entity_cv_igd"
        app:contentPadding="0dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="80dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/left"
                android:background="@drawable/color_blue_gradient_light">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp">

                <TextView
                        style="@style/White.Size36"
                        android:text="16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/number_of_rounds_tv_igd"
                        android:textAlignment="center"/>

                <TextView
                        style="@style/White.Size24"
                        android:text="@string/label_rounds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:textAlignment="center"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/left"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/right">

            <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/icon_menu_fl_gi"
                    >

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/icon_dots_menu"
                        tools:layout_editor_absoluteY="0dp"
                        tools:layout_editor_absoluteX="177dp"
                        android:id="@+id/imageView"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:cropToPadding="true"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:padding="4dp"/>
            </FrameLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/icon_menu_fl_gi"
                    android:id="@+id/linearLayout"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

                <TextView
                        style="@style/BlueDark.Size24"
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title_of_game_tv_igd"/>

                <TextView
                        style="@style/Grey.Size14"
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/time_creation_tv_igd"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="4dp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/linearLayout2">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="18dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/icon_players"
                            android:id="@+id/imageView2"
                            android:adjustViewBounds="true"/>

                    <TextView
                            style="@style/BlueDark.Size14"
                            android:text="8 players"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/number_of_players_tv_igd"
                            android:layout_weight="1"
                            android:textAlignment="textStart"
                            android:layout_marginLeft="4dp"/>
                </LinearLayout>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="4dp">

                    <TextView
                            style="@style/Grey.Size12"
                            android:text="@string/label_best_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView6"
                            android:singleLine="true"/>

                    <TextView
                            style="@style/BlueDark.Size14"
                            android:text="MASXKERMASXKERMASXKERMAS XKERMASXKER"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView7"
                            android:textAlignment="center"
                            android:singleLine="true"
                            android:layout_weight="1"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"/>

                    <TextView
                            style="@style/Grey.Size12"
                            android:text="@string/label_with"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView8"
                            android:singleLine="true"/>

                    <TextView
                            style="@style/BlueDark.Size14"
                            android:text="176 points"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView9"
                            android:singleLine="true"
                            android:textAlignment="center"
                            android:layout_marginLeft="4dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>